freebsd-utils (7.0-3) unreleased; urgency=low

  [ Petr Salinger ]
  * glibc is fixed, drop workarounds, require fixed glibc
  * preparation for disks-encrypting

  [ Aurelien Jarno ]
  * Depends on ufsutils to make sure it is installed on GNU/kFreeBSD
    systems.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 06 Aug 2008 17:29:51 +0200

freebsd-utils (7.0-2) unreleased; urgency=low

  [ Petr Salinger ]
  * link against link_addr() and link_ntoa() from libfreebsd0,
    libbsd0 since 0.0-2 does not export them anymore
  * extend 015_pf.diff to be buildable also against libbsd 0.0-2

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 14 Jul 2008 20:29:05 +0200

freebsd-utils (7.0-1) unreleased; urgency=low

  [ Petr Salinger ]
  * based on FreeBSD 7.0
  * apply sed fixes only once

  [ Aurelien Jarno ]
  * Bumped Standards-Version to 3.8.0 (no changes).

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 03 Jul 2008 14:58:14 +0200

freebsd-utils (6.3-1) unreleased; urgency=low

  [ Petr Salinger ]
  * Add build-dependency on quilt, and use quilt in debian/rules
  * Based on FreeBSD 6.3
  * Fixup in init.d scripts, suggested by Jerome Warnier
  * Adjust start level of kbdcontrol, suggested by Jerome Warnier
  * Do not use "exec -a", suggested by Thorsten Glaser

  [ Aurelien Jarno ]
  * Bumped Standards-Version to 3.7.3 (no changes).
  * Change section to utils. 

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Jan 2008 20:50:03 +0100

freebsd-utils (6.2-3) unreleased; urgency=low

  [ Petr Salinger ]
  * do not install pf related manpages for section 4
    they are already in freebsd-manpages

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 24 Mar 2007 20:48:28 +0100

freebsd-utils (6.2-2) unreleased; urgency=low

  [ Petr Salinger ]
  * include pfctl and authpf in net-tools binary package

 -- Aurelien Jarno <aurel32@debian.org>  Mon,  5 Feb 2007 21:46:02 +0100

freebsd-utils (6.2-1) unreleased; urgency=low

  [ Aurelien Jarno ]