@@ -3,7 +3,7 @@ Section: utils
 Priority: important
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
-Build-Depends: cdbs, debhelper (>= 4.1.0), quilt, freebsd6-buildutils, libkvm-dev (>=7.0), libbsd-dev (>= 0.0-1.2), libc0.1-dev (>= 2.7-13), flex | flex-old, kfreebsd-kernel-headers (>= 0.29), libfreebsd-dev (>= 0.0-5), libipx-dev, libkiconv-dev, libgeom-dev, libdevstat-dev, libsbuf-dev
+Build-Depends: cdbs, debhelper (>= 4.1.0), quilt, po-debconf, freebsd-buildutils, libkvm-dev (>=7.0), libbsd-dev (>= 0.0-1.2), libc0.1-dev (>= 2.7-13), flex | flex-old, kfreebsd-kernel-headers (>= 0.29), libfreebsd-dev (>= 0.0-5), libipx-dev, libkiconv-dev, libgeom-dev, libdevstat-dev, libsbuf-dev
 # libkvm-dev: dmesg
 # libgeom-dev : ccdconfig
 # libfreebsd (>= 0.0-5): ifconfig
