@@ -3,8 +3,86 @@ Sat, 18 Mar 2006 12:08:57 +0100.
 
 It was downloaded from http://www.freebsd.org/
 
-Copyright Holder: The FreeBSD project.
+Upstream author:
+    The FreeBSD project.
 
+Copyright:
+    Copyright (c) 1980, 1983, 1988, 1989, 1991-1997, 2003 
+        The Regents of the University of California.  All rights reserved.
+    Copyright (c) 1989, 1997-1999 Carnegie Mellon University
+    Copyright (c) 1989 Stephen Deering
+    Copyright (c) 1990, 1992 Jan-Simon Pendry
+    Copyright (c) 1993, 1994 Christopher G. Demetriou
+    Copyright (c) 1993, 1994, 1995 The Australian National University
+    Copyright (c) 1993-1998 Sun Microsystems, Inc.
+    Copyright (c) 1993 University of Utah
+    Copyright (c) 1994-1995 Søren Schmidt
+    Copyright (c) 1994 Ugen J.S.Antsilevich
+    Copyright (c) 1995, 1996, 1997, 1998, and 1999 WIDE Project
+    Copyright (c) 1995 Eric Rosenquist, Strata Software Limited
+    Copyright (c) 1995 Jason R. Thorpe
+    Copyright (c) 1995 Pedro Roque Marques
+    Copyright (c) 1996-1999 Whistle Communications, Inc.
+    Copyright (c) 1996-2001 Brian Somers <brian@Awfulhak.org>
+    Copyright (c) 1996 Alex Nash, Paul Traina
+    Copyright (c) 1997 Carsten Bormann <cabo@cs.tu-berlin.de>
+    Copyright (c) 1997 Dave Rand <dlr@bungi.com>/<dave_rand@novell.com>
+    Copyright (c) 1997 Doug Rabson
+    Copyright (c) 1997 FreeBSD Inc.
+    Copyright (c) 1997 Gabor Kincses <gabor@acm.org>
+    Copyright (c) 1997 Ian Donaldson <iand@labtam.labtam.oz.au>
+    Copyright (c) 1997 Peter Wemm
+    Copyright (c) 1998-2003 Sony Computer Science Laboratories Inc.
+    Copyright (c) 1998-2007 Bob Beck (beck@openbsd.org>
+    Copyright (c) 1998 Yes Interactive
+    Copyright (c) 1999 Bill Paul <wpaul@ctr.columbia.edu>
+    Copyright (c) 1999 Internet Business Solutions Ltd., Switzerland
+    Copyright (c) 1999, 2000 Semen Ustimenko <semenu@FreeBSD.org>
+    Copyright (c) 1999 Tommi Komulainen <Tommi.Komulainen@iki.fi>
+    Copyright (c) 2000, 2003, 2004, 2005 Robert N. M. Watson
+    Copyright (c) 2000-2004 Niels Provos <provos@citi.umich.edu>
+    Copyright (c) 2000 David Malone
+    Copyright (c) 2000 Dug Song <dugsong@monkey.org>
+    Copyright (c) 2000 Jakob Stoklund Olesen <stoklund@taxidriver.dk>
+    Copyright (c) 1996, 2000, 2003 Poul-Henning Kamp
+    Copyright (c) 2000 Ruslan Ermilov
+    Copyright (c) 2001, 2003 Can Erkin Acar
+    Copyright (c) 2001-2007, by Weongyo Jeong
+    Copyright (c) 2001 Charles Mott <cm@linktel.net>
+    Copyright (c) 2001, 2002 Daniel Hartmeier
+    Copyright (c) 2001 Kjell Wooding
+    Copyright (c) 2001 Markus Friedl
+    Copyright (c) 2001 Networks Associates Technology, Inc.
+    Copyright (c) 2001 Peter Pentchev
+    Copyright (c) 2001 The Aerospace Corporation
+    Copyright (c) 2001 Theo de Raadt
+    Copyright (c) 2001 Tobias Weingartner
+    Copyright (c) 2001 Wasabi Systems, Inc.
+    Copyright (c) 2002, 2003 Henning Brauer <henning@openbsd.org>
+    Copyright (c) 2002-2003 Luigi Rizzo
+    Copyright (c) 2002 Cedric Berger
+    Copyright (c) 2002 Chris Kuethe (ckuethe@ualberta.ca)
+    Copyright (c) 2002 Jeroen Ruigrok van der Werven <asmodai@wxs.nl>
+    Copyright (c) 2002 Matthieu Herrb
+    Copyright (c) 2002 Michael Shalayeff
+    Copyright (c) 2002 Scott Long <scottl@FreeBSD.org>
+    Copyright (c) 2003-2004 Ryan McBride
+    Copyright (c) 2003 Anil Madhavapeddy <anil@recoil.org>
+    Copyright (c) 2003, 2004 Mike Frantzen <frantzen@w4g.org>
+    Copyright (c) 2004, 2005 Camiel Dobbelaar <cd@sentia.nl>
+    Copyright (c) 2004, 2006 Max Laier
+    Copyright (c) 2004 Alfred Perlstein <alfred@FreeBSD.org>
+    Copyright (c) 2004 Ted Unangst and Todd Miller
+    Copyright (c) 2005, 2006 Masanori Ozawa <ozawa@ongs.co.jp>, ONGS Inc.
+    Copyright (c) 2005 Christian S.J. Peron
+    Copyright (c) 2005 DLS Internet Services
+    Copyright (c) 2005 Jean-Sébastien Pédron
+    Copyright (c) 2005 joshua stein <jcs@openbsd.org>
+    Copyright (c) 2005 Nick Mathewson <nickm@freehaven.net>
+    Copyright (c) 2005 NTT Multimedia Communications Laboratories, Inc.
+    Copyright (c) 2006 Daichi Goto <daichi@freebsd.org>
+    Copyright (c) 2007 Bruce M. Simpson <bms@FreeBSD.org>
+        
 License:
 
     Redistribution and use in source and binary forms, with or without
