@@ -2,7 +2,10 @@
 
 set -e
 
+choices="be.iso.acc.kbd, be.iso.kbd, bg.bds.ctrlcaps.kbd, bg.phonetic.ctrlcaps.kbd, br275.cp850.kbd, br275.iso.acc.kbd, br275.iso.kbd, by.cp1131.kbd, by.cp1251.kbd, by.iso5.kbd, ce.iso2.kbd, cs.latin2.qwertz.kbd, cz.iso2.kbd, danish.cp865.kbd, danish.iso.kbd, dutch.iso.acc.kbd, el.iso07.kbd, estonian.cp850.kbd, estonian.iso15.kbd, estonian.iso.kbd, finnish.cp850.kbd, finnish.iso.kbd, fr_CA.iso.acc.kbd, fr.dvorak.acc.kbd, fr.dvorak.kbd, fr.iso.acc.kbd, fr.iso.kbd, fr.macbook.acc.kbd, german.cp850.kbd, german.iso.acc.kbd, german.iso.kbd, gr.elot.acc.kbd, gr.us101.acc.kbd, hr.iso.kbd, hu.iso2.101keys.kbd, hu.iso2.102keys.kbd, hy.armscii-8.kbd, icelandic.iso.acc.kbd, icelandic.iso.kbd, it.iso.kbd, iw.iso8.kbd, jp.106.kbd, jp.106x.kbd, jp.pc98.iso.kbd, jp.pc98.kbd, kk.pt154.io.kbd, kk.pt154.kst.kbd, latinamerican.iso.acc.kbd, latinamerican.kbd, lt.iso4.kbd, norwegian.dvorak.kbd, norwegian.iso.kbd, pl_PL.ISO8859-2.kbd, pt.iso.acc.kbd, pt.iso.kbd, ru.cp866.kbd, ru.iso5.kbd, ru.koi8-r.kbd, ru.koi8-r.shift.kbd, ru.koi8-r.win.kbd, si.iso.kbd, sk.iso2.kbd, spanish.iso15.acc.kbd, spanish.iso.acc.kbd, spanish.iso.kbd, swedish.cp850.kbd, swedish.iso.kbd, swissfrench.cp850.kbd, swissfrench.iso.acc.kbd, swissfrench.iso.kbd, swissgerman.cp850.kbd, swissgerman.iso.acc.kbd, swissgerman.iso.kbd, tr.iso9.q.kbd, ua.iso5.kbd, ua.koi8-u.kbd, ua.koi8-u.shift.alt.kbd, uk.cp850-ctrl.kbd, uk.cp850.kbd, uk.iso-ctrl.kbd, uk.iso.kbd, us.dvorak.kbd, us.dvorakl.kbd, us.dvorakr.kbd, us.dvorakx.kbd, us.emacs.kbd, us.iso.acc.kbd, us.iso.kbd, us.pc-ctrl.kbd, us.unix.kbd"
+
 . /usr/share/debconf/confmodule
 
+db_subst kbdcontrol/keymap choices "$choices"
 db_input high kbdcontrol/keymap || true
 db_go
