@@ -1,6 +1,6 @@
 Template: kbdcontrol/keymap
 Type: select
-Choices: none, @choices@
+Choices: ${choices}
 Default: none
 Description: Keymap:
  You can choose a keymap in the list.
