@@ -1,7 +1,7 @@
 Template: module-init-tools/network
 Type: multiselect
 Choices: ${choices}
-Description: Select your network card drivers
+_Description: Network card drivers:
  Select the appropiate driver for your network cards. You may select more than
  one driver, or none at all, depending on the number of cards you have.
  .
@@ -12,7 +12,7 @@ Description: Select your network card drivers
 Template: module-init-tools/sound
 Type: multiselect
 Choices: ${choices}
-Description: Select your sound card drivers
+_Description: Sound card drivers:
  Select the appropiate driver for your sound cards. You may select more than
  one driver, or none at all, depending on the number of cards you have.
  .
@@ -23,7 +23,7 @@ Description: Select your sound card drivers
 Template: module-init-tools/other
 Type: multiselect
 Choices: ${choices}
-Description: Select other modules
+_Description: Other modules:
  Below is a selection of modules that don't fall in either of the previous
  cathegories. Select those you find adequate.
  .
