@@ -1,0 +1,2 @@
+[type: gettext/rfc822deb] kbdcontrol.templates
+[type: gettext/rfc822deb] module-init-tools.templates
