@@ -7,8 +7,12 @@ freebsd-utils (7.0-3) unreleased; urgency=low
   [ Aurelien Jarno ]
   * Depends on ufsutils to make sure it is installed on GNU/kFreeBSD
     systems.
+  * Build-depends on freebsd-buildutils instead of freebsd6-buildutils.
+  * debian/*.templates: rewrite short descriptions to comply with
+    debian-policy. 
+  * debian/*.templates: use po-debconf.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 06 Aug 2008 17:29:51 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 06 Aug 2008 18:29:00 +0200
 
 freebsd-utils (7.0-2) unreleased; urgency=low
 
